feat: Add a draft HTTP client class to load the TVD children data. Add log4j2 and Lombok.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ##############################
+## My custom ignore directories
+##############################
+.ignoreme
+
+##############################
 ## Java
 ##############################
 .mtj.tmp/
