--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>2.12.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
